--- a/views/admin/view-category.ejs
+++ b/views/admin/view-category.ejs
@@ -247,7 +247,7 @@
                                                 <p class="text-xs font-weight-bold mb-0"><%= cat.description %></p>
                                               </td>
                                               <td>
-                                                <img src="/public/userIMages/<%= cat.image %>" class="avatar avatar-sm me-3 border-radius-lg" alt="">
+                                                <img src="/public/userImages/<%= cat.image %>" class="avatar avatar-sm me-3 border-radius-lg" alt="">
                                               </td>
                                               <td>
                                                 <p class="text-xs font-weight-bold mb-0"><a href="/admin/edit-category?id=<%= cat._id %>">Edit</a></p>
